Update controllers. Add Services, Repositories, Actions. Add requests and enum, update Data Add Feature tests
